[package]
name = "bitbank"
version = "0.1.1"
authors = ["Yamazaki Daisuke"]
license-file = "LICENSE"
readme = "README.md"
description = "API library for bitbank."

[dependencies]
reqwest="0.6.2"
serde="1.0.8"
serde_json="1.0.2"
time="0.1.37"
rust-crypto="0.2.36"
rustc-serialize="0.3.24"
hyper="0.10.10"
url="1.4.0"
